Mon Jun 18 06:19:23 UTC 2018
a/aaa_elflibs-15.0-x86_64-1.txz:  Upgraded.
  Upgraded to libelf-0.171.so, added libgdbm.so.6.0.0.
a/etc-15.0-x86_64-6.txz:  Rebuilt.
  Add $(uname -m) information to /etc/issue.new.
  Don't include /tmp directories - these are handled by aaa_base.
a/kernel-generic-4.14.50-x86_64-1.txz:  Upgraded.
a/kernel-huge-4.14.50-x86_64-1.txz:  Upgraded.
a/kernel-modules-4.14.50-x86_64-1.txz:  Upgraded.
ap/man-db-2.8.3-x86_64-3.txz:  Rebuilt.
  Recompiled against gdbm-1.15.
ap/zsh-5.5.1-x86_64-2.txz:  Rebuilt.
  Recompiled against gdbm-1.15.
d/clisp-2.49_20180423_d1310adc5-x86_64-1.txz:  Upgraded.
  Compiled against gdbm-1.15.
d/kernel-headers-4.14.50-x86-1.txz:  Upgraded.
d/perl-5.26.2-x86_64-5.txz:  Rebuilt.
  Recompiled against gdbm-1.15.
d/python-2.7.15-x86_64-3.txz:  Rebuilt.
  Recompiled against gdbm-1.15.
d/python3-3.6.5-x86_64-4.txz:  Rebuilt.
  Recompiled against gdbm-1.15.
d/ruby-2.5.1-x86_64-4.txz:  Rebuilt.
  Recompiled against gdbm-1.15.
k/kernel-source-4.14.50-noarch-1.txz:  Upgraded.
kde/kdelibs-4.14.38-x86_64-3.txz:  Rebuilt.
  Patched to build with OpenSSL-1.1.x. Thanks to nobodino.
l/gdbm-1.15-x86_64-1.txz:  Upgraded.
  Shared library .so-version bump.
n/cyrus-sasl-2.1.27_rc8-x86_64-1.txz:  Upgraded.
  Compiled against gdbm-1.15.
n/mutt-1.10.0-x86_64-2.txz:  Rebuilt.
  Recompiled against gdbm-1.15.
n/php-7.2.6-x86_64-2.txz:  Rebuilt.
  Recompiled against gdbm-1.15.
n/yptools-2.14-x86_64-11.txz:  Rebuilt.
  Recompiled against gdbm-1.15.
xap/gnuchess-6.2.5-x86_64-3.txz:  Rebuilt.
  Recompiled against gdbm-1.15.
isolinux/initrd.img:  Rebuilt.
  Copy libefiboot to the installer (needed by efibootmgr).
  Compress the kernel modules with xz.
  Compress the initrd image with xz.
kernels/*:  Upgraded.
usb-and-pxe-installers/usbboot.img:  Rebuilt.
  Copy libefiboot to the installer (needed by efibootmgr).
  Compress the kernel modules with xz.
  Compress the initrd image with xz.
+--------------------------+
Sat Jun 16 05:59:57 UTC 2018