@@ -11,9 +11,23 @@
       <description>Tracking Slackware development in git.</description>
       <language>en-us</language>
       <id xmlns="http://www.w3.org/2005/Atom">urn:uuid:c964f45e-6732-11e8-bbe5-107b4450212f</id>
-      <pubDate>Mon, 18 Jun 2018 06:19:23 GMT</pubDate>
-      <lastBuildDate>Mon, 18 Jun 2018 08:35:03 GMT</lastBuildDate>
+      <pubDate>Mon, 18 Jun 2018 18:33:23 GMT</pubDate>
+      <lastBuildDate>Tue, 19 Jun 2018 07:00:31 GMT</lastBuildDate>
       <generator>maintain_current_git.sh v 1.10</generator>
+      <item>
+         <title>Mon, 18 Jun 2018 18:33:23 GMT</title>
+         <pubDate>Mon, 18 Jun 2018 18:33:23 GMT</pubDate>
+         <link>https://git.slackware.nl/current/tag/?h=20180618183323</link>
+         <guid isPermaLink="false">20180618183323</guid>
+         <description>
+           <![CDATA[<pre>
+isolinux/initrd.img:  Rebuilt.
+  Use -C crc32 when compressing the initrd/modules with xz.
+usb-and-pxe-installers/usbboot.img:  Rebuilt.
+  Use -C crc32 when compressing the initrd/modules with xz.
+           </pre>]]>
+         </description>
+      </item>
       <item>
          <title>Mon, 18 Jun 2018 06:19:23 GMT</title>
          <pubDate>Mon, 18 Jun 2018 06:19:23 GMT</pubDate>
