@@ -1,31 +1,31 @@
-Mon Jun 18 06:30:58 UTC 2018
+Mon Jun 18 18:37:49 UTC 2018
 
 Here is the file list for this directory.  If you are using a 
 mirror site and find missing or extra files in the disk 
 subdirectories, please have the archive administrator refresh
 the mirror.
 
-drwxr-xr-x 12 root root      4096 2018-06-18 06:19 .
+drwxr-xr-x 12 root root      4096 2018-06-18 18:33 .
 -rw-r--r--  1 root root     10064 2016-06-30 18:39 ./ANNOUNCE.14_2
 -rw-r--r--  1 root root     13424 2018-06-13 05:25 ./CHANGES_AND_HINTS.TXT
--rw-r--r--  1 root root    896053 2018-06-16 06:10 ./CHECKSUMS.md5
--rw-r--r--  1 root root       163 2018-06-16 06:10 ./CHECKSUMS.md5.asc
+-rw-r--r--  1 root root    896128 2018-06-18 06:31 ./CHECKSUMS.md5
+-rw-r--r--  1 root root       163 2018-06-18 06:31 ./CHECKSUMS.md5.asc
 -rw-r--r--  1 root root     17976 1994-06-10 02:28 ./COPYING
 -rw-r--r--  1 root root     35147 2007-06-30 04:21 ./COPYING3
 -rw-r--r--  1 root root     19573 2016-06-23 20:08 ./COPYRIGHT.TXT
 -rw-r--r--  1 root root       616 2006-10-02 04:37 ./CRYPTO_NOTICE.TXT
--rw-r--r--  1 root root    418834 2018-06-18 06:19 ./ChangeLog.txt
+-rw-r--r--  1 root root    419089 2018-06-18 18:33 ./ChangeLog.txt
 drwxr-xr-x  3 root root      4096 2013-03-20 22:17 ./EFI
-drwxr-xr-x  2 root root      4096 2018-06-18 06:19 ./EFI/BOOT
+drwxr-xr-x  2 root root      4096 2018-06-18 18:15 ./EFI/BOOT
 -rw-r--r--  1 root root   1253376 2018-02-24 20:49 ./EFI/BOOT/bootx64.efi
 -rw-r--r--  1 root root        78 2013-09-23 20:35 ./EFI/BOOT/grub-embedded.cfg
 -rw-r--r--  1 root root       893 2018-04-17 21:17 ./EFI/BOOT/grub.cfg
 -rw-r--r--  2 root root   8832784 2018-06-16 20:20 ./EFI/BOOT/huge.s
--rw-r--r--  2 root root  35120580 2018-06-18 06:18 ./EFI/BOOT/initrd.img
+-rw-r--r--  2 root root  35113804 2018-06-18 18:06 ./EFI/BOOT/initrd.img
 -rwxr-xr-x  1 root root      2494 2018-02-24 20:49 ./EFI/BOOT/make-grub.sh
 -rw-r--r--  1 root root     10722 2013-09-21 19:02 ./EFI/BOOT/osdetect.cfg
 -rw-r--r--  1 root root      1273 2013-08-12 21:08 ./EFI/BOOT/tools.cfg
--rw-r--r--  1 root root   1179723 2018-06-17 18:00 ./FILELIST.TXT
+-rw-r--r--  1 root root   1179810 2018-06-18 06:30 ./FILELIST.TXT
 -rw-r--r--  1 root root      1572 2012-08-29 18:27 ./GPG-KEY
 -rw-r--r--  1 root root    725985 2018-06-18 06:29 ./PACKAGES.TXT
 -rw-r--r--  1 root root      8564 2016-06-28 21:33 ./README.TXT
@@ -678,12 +678,12 @@ drwxr-xr-x  2 root root      4096 2011-01-31 03:46 ./extra/xf86-video-nouveau-bl
 -rw-r--r--  1 root root       645 2010-04-27 21:47 ./extra/xf86-video-nouveau-blacklist/xf86-video-nouveau-blacklist-noarch-1.txt
 -rw-r--r--  1 root root       880 2010-04-27 21:47 ./extra/xf86-video-nouveau-blacklist/xf86-video-nouveau-blacklist-noarch-1.txz
 -rw-r--r--  1 root root       198 2010-04-27 21:47 ./extra/xf86-video-nouveau-blacklist/xf86-video-nouveau-blacklist-noarch-1.txz.asc
-drwxr-xr-x  3 root root      4096 2018-06-18 06:19 ./isolinux
+drwxr-xr-x  3 root root      4096 2018-06-18 18:14 ./isolinux
 -rw-r--r--  1 root root      6183 2017-11-18 18:47 ./isolinux/README.TXT
 -rw-r--r--  1 root root       788 2007-03-17 19:50 ./isolinux/README_SPLIT.TXT
 -rw-r--r--  1 root root   1474560 2018-02-24 20:49 ./isolinux/efiboot.img
 -rw-r--r--  1 root root       574 2013-10-24 00:19 ./isolinux/f2.txt
--rw-r--r--  2 root root  35120580 2018-06-18 06:18 ./isolinux/initrd.img
+-rw-r--r--  2 root root  35113804 2018-06-18 18:06 ./isolinux/initrd.img
 -rw-r--r--  1 root root        50 2003-01-18 00:02 ./isolinux/iso.sort
 -rw-r--r--  1 root root     24576 2016-05-27 20:36 ./isolinux/isolinux.bin
 -rw-r--r--  1 root root       578 2013-03-27 03:29 ./isolinux/isolinux.cfg
@@ -4933,11 +4933,11 @@ drwxr-xr-x   2 root root     4096 2018-04-18 08:35 ./slackware64/y
 -rw-r--r--   1 root root     1147 2018-03-01 07:55 ./slackware64/y/maketag
 -rw-r--r--   1 root root     1147 2018-03-01 07:55 ./slackware64/y/maketag.ez
 -rw-r--r--   1 root root       14 2018-03-01 07:55 ./slackware64/y/tagfile
-drwxr-xr-x  19 root root     4096 2018-06-18 06:30 ./source
--rw-r--r--   1 root root   452825 2018-06-18 06:30 ./source/CHECKSUMS.md5
--rw-r--r--   1 root root      163 2018-06-18 06:30 ./source/CHECKSUMS.md5.asc
--rw-r--r--   1 root root   640973 2018-06-18 06:30 ./source/FILE_LIST
--rw-r--r--   1 root root 14766475 2018-06-18 06:30 ./source/MANIFEST.bz2
+drwxr-xr-x  19 root root     4096 2018-06-18 18:37 ./source
+-rw-r--r--   1 root root   452825 2018-06-18 18:37 ./source/CHECKSUMS.md5
+-rw-r--r--   1 root root      163 2018-06-18 18:37 ./source/CHECKSUMS.md5.asc
+-rw-r--r--   1 root root   640973 2018-06-18 18:37 ./source/FILE_LIST
+-rw-r--r--   1 root root 14768733 2018-06-18 18:37 ./source/MANIFEST.bz2
 -rw-r--r--   1 root root     1314 2006-10-02 04:40 ./source/README.TXT
 drwxr-xr-x 110 root root     4096 2018-06-14 19:02 ./source/a
 -rw-r--r--   1 root root      567 2018-03-13 18:43 ./source/a/FTBFSlog
@@ -6757,9 +6757,9 @@ drwxr-xr-x   2 root root      4096 2018-02-27 06:13 ./source/f
 -rw-r--r--   1 root root       960 2018-02-27 06:13 ./source/f/slack-desc.linux-faqs
 -rw-r--r--   1 root root       801 2018-02-27 06:13 ./source/f/slack-desc.linux-howtos
 drwxr-xr-x   3 root root      4096 2018-03-18 18:14 ./source/installer
--rw-r--r--   1 root root     28181 2018-06-18 04:14 ./source/installer/ChangeLog.txt
+-rw-r--r--   1 root root     28398 2018-06-18 18:00 ./source/installer/ChangeLog.txt
 -rw-r--r--   1 root root      6849 2018-03-11 00:53 ./source/installer/README
--rwxr-xr-x   1 root root     70873 2018-06-18 04:13 ./source/installer/build_installer.sh
+-rwxr-xr-x   1 root root     70902 2018-06-18 18:01 ./source/installer/build_installer.sh
 -rwxr-xr-x   1 root root      2244 2018-03-18 19:14 ./source/installer/installer.SlackBuild
 -rw-r--r--   1 root root      1391 2013-04-01 21:47 ./source/installer/module-blacklist
 drwxr-xr-x   7 root root      4096 2018-03-12 07:06 ./source/installer/sources
@@ -12593,9 +12593,9 @@ drwxr-xr-x 4 root root     4096 2018-06-13 05:57 ./testing
 -rw-r--r-- 1 root root      224 2018-06-13 05:57 ./testing/PACKAGES.TXT
 drwxr-xr-x 2 root root     4096 2018-06-12 19:55 ./testing/packages
 drwxr-xr-x 2 root root     4096 2018-06-12 19:55 ./testing/source
-drwxr-xr-x 2 root root     4096 2018-06-18 06:19 ./usb-and-pxe-installers
+drwxr-xr-x 2 root root     4096 2018-06-18 18:15 ./usb-and-pxe-installers
 -rw-r--r-- 1 root root    31203 2011-03-21 21:21 ./usb-and-pxe-installers/README_PXE.TXT
 -rw-r--r-- 1 root root     9197 2013-09-25 04:33 ./usb-and-pxe-installers/README_USB.TXT
 -rw-r--r-- 1 root root      574 2013-03-27 04:59 ./usb-and-pxe-installers/pxelinux.cfg_default
--rw-r--r-- 1 root root 45020160 2018-06-18 06:18 ./usb-and-pxe-installers/usbboot.img
+-rw-r--r-- 1 root root 45007872 2018-06-18 18:06 ./usb-and-pxe-installers/usbboot.img
 -rw-r--r-- 1 root root    16045 2016-03-29 07:41 ./usb-and-pxe-installers/usbimg2disk.sh
