@@ -1,3 +1,8 @@
+Mon Jun 18 17:53:56 UTC 2018
+  When compressing the initrd with xz, add: -C crc32 
+  Use xzcat instead of zcat in a few places where the build script wants to
+  extract a previous initrd.
++--------------------------+
 Mon Jun 18 04:13:53 UTC 2018
   Copy libefiboot to the installer (needed by efibootmgr).
   Compress the kernel modules with xz.
