@@ -1,3 +1,9 @@
+Mon Jun 18 18:33:23 UTC 2018
+isolinux/initrd.img:  Rebuilt.
+  Use -C crc32 when compressing the initrd/modules with xz.
+usb-and-pxe-installers/usbboot.img:  Rebuilt.
+  Use -C crc32 when compressing the initrd/modules with xz.
++--------------------------+
 Mon Jun 18 06:19:23 UTC 2018
 a/aaa_elflibs-15.0-x86_64-1.txz:  Upgraded.
   Upgraded to libelf-0.171.so, added libgdbm.so.6.0.0.
